Simplified deployment to remove all Docker dependencies

--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,8 @@
         <div class="buttons">
             <a href="https://github.com/Boom-Vitt/BoomBigNose" class="button">GitHub Repository</a>
             <a href="https://railway.app/project/3c5932b7-b548-4802-b39f-55d7ccfb545d" class="button">Railway Project</a>
+            <a href="/github" class="button">GitHub (Redirect)</a>
+            <a href="/railway" class="button">Railway (Redirect)</a>
         </div>
     </div>
 
